refactor: JUnit Assert to AssertJ
Resolve ambiguities